Fix heading overflow and button color

--- a/src/App.css
+++ b/src/App.css
@@ -39,11 +39,10 @@
   box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
 }
 
-.search-button{
+.search-button.btn.btn-primary{
   background: skyblue;
   border:none;
   padding:10px 20px;
-  margin-left:20px;
   color:white;
   cursor: pointer;
   border-radius: 8px;
